-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/47535081-0322-4d83-bb78-f7e11abb86d0-S27759/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/748d0de2-23dd-4f75-822a-349f0446d58d/runs/34d1d39e-f593-41e1-b78f-214d285a45c1/workspace/open/src/hotspot/share/opto/phaseX.cpp:1088), pid=27198, tid=27238
# assert(false) failed: modified node was not processed by IGVN.transform_old()
Current CompileTask:
C2: 66610 12366 4 java.util.ComparableTimSort::sort (219 bytes)
Stack: [0x00007f92244e8000,0x00007f92245e9000], sp=0x00007f92245e3a80, free space=1006k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1690e78] PhaseIterGVN::verify_PhaseIterGVN()+0x168
V [libjvm.so+0xa3a78a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x6ca
V [libjvm.so+0xa3545f] Compile::Optimize()+0x6ff
V [libjvm.so+0xa382f8] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1ab8
V [libjvm.so+0x86252c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
V [libjvm.so+0xa48190] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xca0
V [libjvm.so+0xa48c98] CompileBroker::compiler_thread_loop()+0x5a8
V [libjvm.so+0x193a786] JavaThread::thread_main_inner()+0x256
V [libjvm.so+0x19414d0] Thread::call_run()+0x100
V [libjvm.so+0x1607b56] thread_native_entry(Thread*)+0x116
Looks like this was triggered byJDK-8246603.
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/47535081-0322-4d83-bb78-f7e11abb86d0-S27759/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/748d0de2-23dd-4f75-822a-349f0446d58d/runs/34d1d39e-f593-41e1-b78f-214d285a45c1/workspace/open/src/hotspot/share/opto/phaseX.cpp:1088), pid=27198, tid=27238
# assert(false) failed: modified node was not processed by IGVN.transform_old()
Current CompileTask:
C2: 66610 12366 4 java.util.ComparableTimSort::sort (219 bytes)
Stack: [0x00007f92244e8000,0x00007f92245e9000], sp=0x00007f92245e3a80, free space=1006k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1690e78] PhaseIterGVN::verify_PhaseIterGVN()+0x168
V [libjvm.so+0xa3a78a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x6ca
V [libjvm.so+0xa3545f] Compile::Optimize()+0x6ff
V [libjvm.so+0xa382f8] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1ab8
V [libjvm.so+0x86252c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
V [libjvm.so+0xa48190] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xca0
V [libjvm.so+0xa48c98] CompileBroker::compiler_thread_loop()+0x5a8
V [libjvm.so+0x193a786] JavaThread::thread_main_inner()+0x256
V [libjvm.so+0x19414d0] Thread::call_run()+0x100
V [libjvm.so+0x1607b56] thread_native_entry(Thread*)+0x116
Looks like this was triggered by
- relates to
-
JDK-8247216 [lworld] Revisit mergemem optimizations
-
- Open
-