8255600: [lworld] C2 compilation fails with assert: modified node was not processed by IGVN.transform_old()